--- a/math154/calculus3_conservative_fields_greens_thm.html
+++ b/math154/calculus3_conservative_fields_greens_thm.html
@@ -46,9 +46,7 @@ def _(funx=input_box(funx,label="f =  "),funy=input_box(funy,label="g =  "),
     vfp.show()
 </script>
 </div>
-<!--
-Need to cover - sketching; recognizing fields/flow lines; gradient fields; potential functions; convservative fields; mixed partials theorem.
--->
+
 
 <h2>Warmup - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wu">warmups</button>
@@ -80,30 +78,6 @@ fields below has a positive circulation?
           <br><img src="./vq_circulation_fields.png" width=600>
 
           </div><br>
-
-
-          <!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq2">Question 2</button>
-            <div id="vq2" class="collapse">
-
-
-          <P> Which of the following gives the volume of the unit sphere?
-            <ol type='1'>
-              <li> \(\displaystyle \int_0^{2\pi} \int_0^{2\pi} \int_0^{1} d\rho~d\theta~d\phi\)<br>
-              <li> \(\displaystyle \int_0^{\pi} \int_0^{2\pi} \int_0^{1} d\rho~d\theta~d\phi\)<br>
-              <li> \(\displaystyle \int_0^{\pi} \int_0^{2\pi} \int_0^{1} \rho^2 \sin\phi d\rho~d\theta~d\phi\)<br>
-              <li> \(\displaystyle \int_0^{\pi} \int_0^{2\pi} \int_0^{1} \rho^2 \sin\phi d\rho~d\phi~d\theta\)<br>
-              <li> \(\displaystyle \int_0^{\pi} \int_0^{2\pi} \int_0^{1} \rho d\rho~d\theta~d\phi\)<br>
-              <li> none of the above
-              </ol>
-
-            </div><br>
-
-
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vq4">Question 4</button>
-            <div id="vq4" class="collapse">
-          <img src="polar_int_unit_circle_voting.png" width=400><br>
-            </div>
--->
 </div>
 
 
@@ -187,6 +161,13 @@ fields below has a positive circulation?
         </ol>
 
 </div>
+
+<h2>Example - RBC</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rbcarea">Example</button>
+  <div id="rbcarea" class="collapse">
+    <P>How can Green's Theorem help us calculate the area of the resting shape of a 2-dimensional red blood cell pictured below?<br>
+      <img src="./rbc_shape.png" width=400><br>
+    </div>
 
 
 
