--- a/math154/calculus3_conservative_fields_greens_thm.html
+++ b/math154/calculus3_conservative_fields_greens_thm.html
@@ -162,13 +162,18 @@ fields below has a positive circulation?
 
 </div>
 
-<h2>Example - RBC</h2>
+<!--<h2>Example - RBC</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rbcarea">Example</button>
   <div id="rbcarea" class="collapse">
     <P>How can Green's Theorem help us calculate the area of the resting shape of a 2-dimensional red blood cell pictured below?<br>
       <img src="./rbc_shape.png" width=400><br>
     </div>
-
+-->
+<h2>Example - area</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rbcarea">Example</button>
+  <div id="rbcarea" class="collapse">
+    <P>How can Green's Theorem help us calculate the areas shapes?
+    </div>
 
 
 <br>
