--- a/math154/calculus3_flux_integrals.html
+++ b/math154/calculus3_flux_integrals.html
@@ -70,6 +70,7 @@ def _(funx=input_box(funx,label="f =  "),funy=input_box(funy,label="g =  "),
         open set, possibly containing some or all of it boundary \(\displaystyle \partial D\).
         A parameteritized surface in \(\mathcal{R}^3\) is a continuous function \(\vec{X}: D \subseteq \mathcal{R}^2 \to \mathcal{R}^3\) that is one-to-one on \(D\), except possibly at \(\partial D\). We say \(\vec{X}(D)=\vec{S}\) and \(\vec{S}\) is called the surface.
         <br>
+        <img src="./surf_integral_def.png" width=400><br><br>
       <P>Think about parametric equations or vector valued functions, but with two parameters.
         \(\displaystyle \vec{S}(s,t) = \begin{bmatrix}x(s,t)\\y(s,t)\\z(s,t)\end{bmatrix}\)
 
@@ -122,6 +123,7 @@ show(P)
 <div id="areas" class="collapse">
 <P><b>Question</b>: What does an area element look like for a parametric surface?
   <br>
+  <img src="./surf_integral_area_element.png" width=400><br><br>
   \(\displaystyle \Delta A \approx || \vec{T}_s \Delta s \times \vec{T}_t \Delta t || = ||\vec{T}_s \times \vec{T}_t || \Delta s \Delta t = ||\vec{N}|| \Delta s \Delta t \)
   <br><br>
   As \( \Delta s, \Delta t \to 0, \Delta A \to dS\).
