--- a/math154/calculus3_flux_integrals.html
+++ b/math154/calculus3_flux_integrals.html
@@ -27,7 +27,7 @@
   <h1>Surface Integrals and Flux</h1>
 
 <hr>
- 
+
 <div class="mycell">
 <script type="text/x-sage">
 # everything following hash symbol is comment
@@ -192,7 +192,16 @@ show(P)
 
 <br>
 
+<!--
+from sage.plot.plot3d.parametric_surface import ParametricSurface
+var('s t')
 
+def func(s,t): return (1+t*cos(s/2.))*cos(s), (1+t*cos(s/2.))*sin(s), t*sin(s/2.)
+
+P = ParametricSurface(func, (srange(0,2*pi,0.01), srange(-0.5,0.5,0.01)))
+
+show(P)
+-->
 <h2>Example surface </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exmob">Example</button>
 <div id="exmob" class="collapse">
@@ -213,6 +222,7 @@ P = ParametricSurface(func, (srange(0,2*pi,0.01), srange(-0.5,0.5,0.01)))
 show(P)
   </script>
 </div>
+</details>
 </div>
 
 <h2>Example cylinder </h2>
