--- a/math154/calculus3_flux_integrals.html
+++ b/math154/calculus3_flux_integrals.html
@@ -156,6 +156,52 @@ show(P)
 <P>Consider a thin shell in the shape of a paraboloid \(z = 4-x^2-y^2\) above the \(xy\)-plane with mass density \(\rho = 1\). What is the center of mass of this shape?
 </div>
 
+<h2>Flux voting questions</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#fvq">Example</button>
+<div id="fvq" class="collapse">
+<details><summary><b>Question 1</b></summary>
+  <P>A river is flowing downstream at a constant rate of 5 ft/s. We take a rectangular net
+  that is 6 ft wide and 3 ft deep and place it in the river so that a vector perpendicular
+  to the net (a normal vector) is parallel to the velocity of the water. What is the rate
+  at which water flows through the net?
+  <table width=500><tr><td>A) 0 ft\(^3\)/s</td><td>B) 15 ft\(^3\)/s</td><td>C) 30 ft\(^3\)/s</td><td>D) 90 ft\(^3\)/s</td><td>E) none of other answers</td></tr></table>
+</details>
+<br>
+<details><summary><b>Question 2</b></summary>
+<img src="./flux_vq1.png" width=400><br>
+</details>
+</br>
+<details><summary><b>Question 3</b></summary>
+  Consider the flux of \(\vec{F} = x \hat{x}\) through a disk of radius 1 oriented as described below. In
+  which case is the flux positive?
+  <ol type='a'>
+  <li> In the \(yz\)-plane, centered at the origin and oriented in the direction of increasing
+  \(x\).
+  <li> In the plane \(x = 2\), centered on the \(x\)-axis and oriented away from the origin.
+  <li> In the plane \(y = 2\), centered on the \(y\)-axis and oriented away from the origin.
+  <li> In the plane \(x + y = 2\), centered on the \(x\)-axis and oriented away from the origin.
+  <li> More than one of the above has positive flux.
+  <li> None of the above
+  </ol>
+</details>
+</br>
+<details><summary><b>Question 4</b></summary>
+  Consider the flux of \(\vec{F} = y \hat{x}\) through a disk of radius 1 oriented as described below. In
+  which case is the flux positive?
+  <ol type='a'>
+  <li> In the \(yz\)-plane, centered at the origin and oriented in the direction of increasing
+  \(x\).
+  <li> In the plane \(x = 2\), centered on the \(x\)-axis and oriented away from the origin.
+  <li> In the plane \(y = 2\), centered on the \(y\)-axis and oriented away from the origin.
+  <li> In the plane \(x + y = 2\), centered on the \(x\)-axis and oriented away from the origin.
+  <li> More than one of the above has positive flux.
+  <li> None of the above
+  </ol>
+</details>
+
+</div>
+
+
 <h2>Vector surface integrals </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#vsi">Example</button>
 <div id="vsi" class="collapse">
