--- a/math154/calculus3_MV_FTOC.html
+++ b/math154/calculus3_MV_FTOC.html
@@ -51,7 +51,7 @@ def _(funx=input_box(funx,label="f =  "),funy=input_box(funy,label="g =  "),
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wu">Example</button>
 <div id="wu" class="collapse">
   <details><summary><b>Question 1</b></summary>
-  <P>Consider working in spherical coordinate. The flux of the vector field \(\vec{F} = 4 \hat{r}\) through the surface of the sphere of radius 2 centered at the origin is:
+  <P>Consider working in spherical coordinates. The flux of the vector field \(\vec{F} = 4 \hat{r}\) through the surface of the sphere of radius 2 centered at the origin is:
   <table width=500><tr><td>A) 0 </td><td>B) \(8 \pi \)</td><td>C) \(16 \pi \)</td><td>D) \(32 \pi \)</td><td>E) \(64 \pi \)</td><td>F) None of other answers.</td></tr></table>
 </details>
 <br>
@@ -92,7 +92,7 @@ one requires an integral. Which one? (Let \(r\) be appropriate for spherical or 
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example0">Example</button>
   <div id="example0" class="collapse">
     <P>Let \(S\) be the paraboloid \(z = 9 - x^2 - y^2\) defined above the disk in the \(xy\) plane with radius 3.
-      Then \(\partial S\) is the circle \(C = \{ (x,y,z) \in \mathbb{R}^3 \mid x^2 + y^2 = 9, z = 0\).
+      Then \(\partial S\) is the circle \(C = \{ (x,y,z) \in \mathbb{R}^3 \mid x^2 + y^2 = 9, z = 0\} \).
       Let \(\vec{F}= (2z - y) \hat{x} + (x+z) \hat{y} + (3x - 2y) \hat{z}\).
       Show Stoke's Theorem holds by evaulting each side of the equation \(\displaystyle \oint_C \vec{F} \cdot d\vec{r} = \iint_S \nabla \times \vec{F} \cdot d\vec{S}\).
 
@@ -112,9 +112,21 @@ one requires an integral. Which one? (Let \(r\) be appropriate for spherical or 
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example1">Example</button>
   <div id="example1" class="collapse">
  <P> Let \( \vec{F} = \vec{r} \) and let \(\Omega\) be the cylinder with radius \(a\) and height \(b\) centered at the origin with one base on the \(xy\) plane extending up.
-   Calculate \( \oint \hspace{-2.5mm}\int_{\partial \Omega} \vec{F} \cdot d\vec{S}\).
+   Calculate \( \unicode{x222F}_{\partial \Omega} \vec{F} \cdot d\vec{S}\).
 
 </div>
+
+<!-- Note \unicode{x222F} gives closed surface double integral symbol \oiint for mathjax -->
+
+<h2>Example - Divergence Theorem </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#examplediv">Example</button>
+  <div id="examplediv" class="collapse">
+    <P>Calculate the flux integral \(\displaystyle \unicode{x222F}_S \vec{F} \cdot ~d\vec{S}\) where \(S\) is the unit sphere \(x^2 + y^2 + z^2 =1\) and the vector field is given below.
+      <ol type='A'>
+        <li>\(\displaystyle \vec{F} = x \hat{x} + 2y \hat{y} + 3z \hat{z}\)<br><br>
+        <li>\(\displaystyle \vec{F} = x \hat{x} + y^2 \hat{y}\)<br>
+        </ol>
+  </div>
 
 <h2>Example - More Divergence Theorem </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example11">Example</button>
