--- a/math154/calculus3_MV_FTOC.html
+++ b/math154/calculus3_MV_FTOC.html
@@ -151,6 +151,6 @@ one requires an integral. Which one? (Let \(r\) be appropriate for spherical or 
 
 <br>
 
-
+<footer style="text-align: center; padding-top: 5cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
