--- a/math250/week2.html
+++ b/math250/week2.html
@@ -34,7 +34,7 @@ $(function () {
     <li> Identify any separable DEs below and find their solutions.
       <ol type='a'>
         <li> \( \frac{dy}{dt} = ty + t\) <br> <br>
-        <li> \( \frac{dx}{dt} = y^2 + t^2\) <br> <br>
+        <li> \( \frac{dy}{dt} = y^2 + t^2\) <br> <br>
         <li> \( \frac{dy}{dt} = \sin(ty) \) <br> <br>
         <li> \( \frac{dx}{dt} = rx(1+x) \) <br> <br>
       </ol>
