--- a/math250/week4.html
+++ b/math250/week4.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-    <body style="width: 1000px; padding-left: 1cm; font-size: 200%;" background="bg.jpg">
+    <body style="width: 1000px; padding-left: 1cm; font-size: 200%;" background="">
 
   <h1>Math 250 - Intro to Linear Algebra</h1>
 
