--- a/math250/week5.html
+++ b/math250/week5.html
@@ -42,8 +42,8 @@
                                0 & 1 \\
                                5 & 3 \end{bmatrix} $$
 
-    <li> What is the relationship between \(v\) and \( Av\), where
-      $$v = \begin{bmatrix}1\\-1\end{bmatrix} \hspace{1cm} A = \begin{bmatrix}0 & 1\\-2 & -3\end{bmatrix}?$$
+    <li> What is the relationship between \(\vec{v}\) and \( A\vec{v}\), where
+      $$\vec{v} = \begin{bmatrix}1\\-1\end{bmatrix} \hspace{1cm} A = \begin{bmatrix}0 & 1\\-2 & -3\end{bmatrix}?$$
     <li> What is the inverse of \( M = \begin{bmatrix} 1 & 3\\ 5 & 4 \end{bmatrix}\)?
     <li> Calculate the determinant of
       $$A = \begin{bmatrix} 4 & 6\\ 3 & 8 \end{bmatrix} $$
@@ -54,7 +54,7 @@
       <div id="ex0ans" class="collapse">
         <ol type='A'>
           <li>\(AB = \begin{bmatrix} 5&3&2\\1&1&1\end{bmatrix}, AC = \begin{bmatrix} 6&4\\1&2\end{bmatrix}, BC = \begin{bmatrix} 1&1\\5&4\\14&13\end{bmatrix}\)
-          <li>\(Av = -v\)
+          <li>\(A\vec{v} = -\vec{v}\)
           <li>\( M^{-1} = \frac{1}{-11}\begin{bmatrix} 4 & -3\\ -5 & 1 \end{bmatrix}\)?
           <li>14
           <li>12
@@ -73,11 +73,11 @@
     $$ x_1 + 2x_2 = 3$$
 <ol type='1'>
 <li> Solve this system using elimination, subsitution, or Gaussian elimination of an augemented matrix.
-<li> Write the system in matrix-vector form. \(Ax=b\)
+<li> Write the system in matrix-vector form. \(A\vec{x}=\vec{b}\)
 <li> Calculate the inverse of \(A\).
-<li> Calculate the solution as \(x = A^{-1}b\). Does it agree with your solution above?
-<li> Solve \(Ax = \begin{bmatrix} 1 & 2 \end{bmatrix}^T\).
-<li> Solve \(Ax = \begin{bmatrix} 3 & 5 \end{bmatrix}^T\).
+<li> Calculate the solution as \(\vec{x} = A^{-1}\vec{b}\). Does it agree with your solution above?
+<li> Solve \(A\vec{x} = \begin{bmatrix} 1 \\ 2 \end{bmatrix}\).
+<li> Solve \(A\vec{x} = \begin{bmatrix} 3 \\ 5 \end{bmatrix}\).
 </ol>
 </div>
 
@@ -270,6 +270,6 @@ We will derive this formula.<br>
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_y1o6uxf3&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_wr0imd4z" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </div>
 
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
