--- a/math250/week7.html
+++ b/math250/week7.html
@@ -29,8 +29,9 @@
 <hr>
 
 <h2>Warmups </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
+-->
     <ol type='A'>
     <li> Write the vector \(\vec{t}\) as a linear combination of \(\vec{u},\vec{v},\vec{w}\).
       $$\vec{t} = \begin{bmatrix}2\\-7\\9\end{bmatrix}, \vec{u} = \begin{bmatrix}1\\-2\\2\end{bmatrix},\vec{v} = \begin{bmatrix}3\\0\\1\end{bmatrix},\vec{w} = \begin{bmatrix}1\\-1\\2\end{bmatrix}$$<br>
@@ -59,21 +60,23 @@
       <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_y91ksz32&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_rgrg5jou" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     </details>
     </ol>
- </div>
+ <!--</div>-->
 
 <!--$$begin{bmatrix} a & b\\ c & d \end{bmatrix}-->
 
 <h2>Example 1 - Solution subspaces </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
+-->
     <P>Solve the set of equations below and show that the solutions are a subspace of \(\mathbb{R}^4\).
       $$x_1 + 3x_2 - 3x_3 + 7x_4 =0$$
       $$x_2 - 4x_3 + 5x_4 =0 $$.
-</div>
+<!--</div>-->
 
 <h2>Example 2 - Nullspaces or kernels </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
+-->
  <P> Consider the matrix \(A\) below.
    $$A = \begin{bmatrix} 1 & 1 & 1 & -1 \\ 2 & 4 & 5 & 6 \\ 3 & 9 & 5 & 4\end{bmatrix}$$
 
@@ -85,11 +88,12 @@
      <li> Write your solutions as a linear combination of vectors.
    </ol>
 
-</div>
+<!--</div>-->
 
 <h2>Example 3 </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
+-->
 <br>
 <P> Consider the ODE \(dy/dx + P(x) y = 0\).
   <ol type='1'>
@@ -100,13 +104,13 @@
     <li> Are solutions to this ODE a vector space?
   </ol>
 
-</div>
+<!--</div>-->
 
 
 <h2>Example 4 -  </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
 <div id="ex4" class="collapse">
-
+-->
 <P> Consider the set of all parabolas
   $$ \mathcal{P}_2 = \left\{ y(x) | y(x) = ax^2 + bx + c \mbox{,  where } a,b,c \in \mathbb{R} \right\}.$$
 
@@ -119,11 +123,12 @@
   <details><summary>video</summary>
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_uceckunl&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_kfuf7kzl" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </details>
-</div>
+<!--</div>-->
 
 <h2>Example 5 - </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
 <div id="ex5" class="collapse">
+-->
   <P> Consider the vector space of all 2x2 symmetric matrices.
     $$V = \left\{ A_{2\times 2} \mid A = \begin{bmatrix}a & b \\b & d \end{bmatrix}, a,b,d \in \mathbb{R} \right\}$$
   <P>Note that in this situation matrices are the objects in the vector space, so a matrix is a "vector" here when thinking about definitions and theorems regarding vector spaces.
@@ -136,12 +141,12 @@
     <details><summary>video</summary>
     <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_qb7pu1ii&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_isvlyzmz" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </details>
-</div>
+<!--</div>-->
 
 <h2>Example 6 - </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-
+-->
 <P> Let \( A = \begin{bmatrix} 1 & -3 & 2 \\-4 & 1 & 3\end{bmatrix}\).
 
   <ol>
@@ -154,70 +159,22 @@
 
 
 
-</div>
+<!--</div>-->
 
 <h2>Example 7 - in the span? </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
+<!--<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
 <div id="ex7" class="collapse">
-
+-->
 <P> Find the value of \(h\) so that \(\vec{b}\) is in span\(\{\vec{u}_1, \vec{u}_2\}\) where
   $$\vec{u}_1 = \begin{bmatrix}1\\3\\1\end{bmatrix}, \hspace{1cm} \vec{u}_2 = \begin{bmatrix}-5\\-8\\2\end{bmatrix}, \hspace{1cm} \vec{b} = \begin{bmatrix}3\\-5\\h\end{bmatrix}.$$
   <br>
   <details><summary>video</summary>
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_88e4dm12&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_b6sovcde" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </details>
-</div>
-
-<!--
-<h2>Example 8 - Even more determinants</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
-<div id="ex8" class="collapse">
-
-<P> Consider the matrices
-  $$A = \begin{bmatrix}1 & 4 & 0\\1 & 0 & 2\\0 & 1 & 0\end{bmatrix} \hspace{1cm} B =  \begin{bmatrix}1 & 2 & 0\\0 & 1 & 1\\1 & 3 & 0\end{bmatrix}.$$
-
-  <ol type='1'>
-  <li> Find \(|A|\) and \(|B|\).
-  <li> Calculate \(AB\).
-  <li> Calculate \(|AB|\). What do you notice from your results above?
-  <li> Write down \(A^T\) and calculate \(|A^T|\). How is it related to \(|A|\)? Explain why this makes sense.
-  </ol>
-</div>
+<!--</div>-->
 
 
-<h2>Example 9 - Law of Cosines </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example 9</button>
-<div id="ex9" class="collapse">
 
-Consider the figure below.<br>
-<img src="./lawofcosines.jpg" width=350><br>
-By dropping a perpendicular from each vertex to the opposite side, derive the equations below.
-$$c \cos B + b \cos C = a$$
-$$c \cos A + a \cos C = b$$
-$$a \cos B + b \cos A = c$$
-<P>Rewrite these as three linear equations for the unknowns \(\cos A, \cos B\), and \(\cos C\). Row reduce this system to derive the <a href="https://en.wikipedia.org/wiki/Law_of_cosines">Law of Cosines</a>.
-
-</div>
-
-<h2>Example 10 - Wheatstone Bridge </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
-<div id="ex10" class="collapse">
-
-The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatsone bridge</a>. It is useful for determining an unknown resistance of an object.
-When using the bridge to find resistance \(R_x\), resistances \(R_1\) and \(R_3\) are known, while \(R_2\) is adjustable.
-\(R_2\) is adjusted until the current through the middle branch (from junctions B to D) is equal to zero. Then the resistance \(R_x\) can be found from
-$$R_x  = \frac{R_2 R_3}{R_1}.$$
-We will derive this formula.<br>
-<img src="./wheatstonebridge.png" width=350><br>
-
-<ol type='1'>
-<li> Use Kirchoff's current law to write equations for the currents \(I_1, I_2, I_3, I_x, I_G\) in junctions B and D.
-<li> Use Kirchoff's voltage law to write equations for the currents in loops ABD and BCD.
-<li> When the bridge is balanced so \(I_G = 0\) we have 4 linear equations in the unknowns \(I_1, I_2, I_3, I_x\). Use these to derive the formula above.
-</ol>
-</div>
--->
-
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
+<footer style="text-align: center; padding-top: 5cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
