--- a/math250/exam1review.html
+++ b/math250/exam1review.html
@@ -130,6 +130,8 @@ population is 790 in the year 1750, and 1260 in the year 1850, how big is it in 
 correspond to the year 1750.<br><br>
   <li>Find the general solution to \( \frac{dy}{dx} = 6x(y-1)^{2/3}\).<br><br>
   <li>Find any equilibrium solutions to \( \frac{dy}{dx} = \ln(|x|) (x^2 - 4)\).<br><br>
+  <li>Consider using the Runge-Kutta method to solve the IVP \(y' = f(x,y), y(a)=\alpha\) with stepsize \(h\).
+    If we solve the problem again, but with stepsize \(h/10\), how many more function evaluations are required compared the first case?<br><br>
   </ol>
 </div>
 
