--- a/math250/exam1review.html
+++ b/math250/exam1review.html
@@ -131,7 +131,7 @@ correspond to the year 1750.<br><br>
   <li>Find the general solution to \( \frac{dy}{dx} = 6x(y-1)^{2/3}\).<br><br>
   <li>Find any equilibrium solutions to \( \frac{dy}{dx} = \ln(|x|) (x^2 - 4)\).<br><br>
   <li>Consider using the Runge-Kutta method to solve the IVP \(y' = f(x,y), y(a)=\alpha\) with stepsize \(h\).
-    If we solve the problem again, but with stepsize \(h/10\), how many more function evaluations are required compared the first case?<br><br>
+    If we solve the problem again, but with stepsize \(h/10\), how many more times do we evaluate the function \(f\) compared the first case?<br><br>
   </ol>
 </div>
 
